--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
-    "next": "15.0.1",
+    "next": "14.2.16",
     "next-mdx-remote": "^5.0.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^18",
+    "react-dom": "^18",
     "remark-frontmatter": "^5.0.0",
     "remark-mdx-frontmatter": "^5.0.0",
     "tailwind-merge": "^2.5.4",
