--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "check": "biome check",
+    "check:fix": "biome check --write ./src",
+    "format": "biome format",
+    "format:fix": "biome format --write ./src",
+    "lint": "biome lint",
+    "lint:fix": "biome lint --write ./src",
     "prepare": "husky"
   },
   "dependencies": {
