--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "check": "biome check",
+    "check": "biome check ./src",
     "check:fix": "biome check --write ./src",
-    "format": "biome format",
+    "format": "biome format ./src",
     "format:fix": "biome format --write ./src",
-    "lint": "biome lint",
+    "lint": "biome lint ./src",
     "lint:fix": "biome lint --write ./src",
     "prepare": "husky"
   },
