--- a/jinxify/package.json
+++ b/jinxify/package.json
@@ -1,38 +1,41 @@
 {
-  "name": "jinxify",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "check": "biome check --write ./src",
-    "db:generate": "npx drizzle-kit generate",
-    "db:migrate": "npx drizzle-kit migrate"
-  },
-  "dependencies": {
-    "@neondatabase/serverless": "^0.10.4",
-    "@radix-ui/react-slot": "^1.1.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.36.4",
-    "lucide-react": "^0.462.0",
-    "next": "14.2.18",
-    "react": "^18",
-    "react-dom": "^18",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "drizzle-kit": "^0.28.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "tsx": "^4.19.2",
-    "typescript": "^5"
-  }
+	"name": "jinxify",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"check": "biome check --write ./src",
+		"db:generate": "npx drizzle-kit generate",
+		"db:migrate": "npx drizzle-kit migrate",
+		"db:studio": "npx drizzle-kit studio"
+	},
+	"dependencies": {
+		"@auth/drizzle-adapter": "^1.7.4",
+		"@neondatabase/serverless": "^0.10.4",
+		"@radix-ui/react-slot": "^1.1.0",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"dotenv": "^16.4.5",
+		"drizzle-orm": "^0.36.4",
+		"lucide-react": "^0.462.0",
+		"next": "14.2.18",
+		"next-auth": "^5.0.0-beta.25",
+		"react": "^18",
+		"react-dom": "^18",
+		"tailwind-merge": "^2.5.5",
+		"tailwindcss-animate": "^1.0.7"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"drizzle-kit": "^0.28.1",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1",
+		"tsx": "^4.19.2",
+		"typescript": "^5"
+	}
 }
