--- a/jinxify/package.json
+++ b/jinxify/package.json
@@ -15,6 +15,7 @@
 		"@auth/drizzle-adapter": "^1.7.4",
 		"@neondatabase/serverless": "^0.10.4",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@tanstack/react-query": "^5.61.5",
 		"bpmn-js": "^18.1.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -26,7 +27,8 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"tailwind-merge": "^2.5.5",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
