--- a/jinxify/package.json
+++ b/jinxify/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@auth/drizzle-adapter": "^1.7.4",
 		"@neondatabase/serverless": "^0.10.4",
+		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@tanstack/react-query": "^5.61.5",
 		"bpmn-js": "^18.1.1",
