--- a/jinxify/package.json
+++ b/jinxify/package.json
@@ -14,7 +14,10 @@
 	"dependencies": {
 		"@auth/drizzle-adapter": "^1.7.4",
 		"@neondatabase/serverless": "^0.10.4",
+		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-tooltip": "^1.1.4",
 		"@tanstack/react-query": "^5.61.5",
 		"bpmn-js": "^18.1.1",
 		"class-variance-authority": "^0.7.1",
