Add ai bpmn generation

--- a/jinxify/.env.example
+++ b/jinxify/.env.example
@@ -1,2 +1,9 @@
-AUTH_SECRET='Ask Admin'
-DATABASE_URL='Ask Admin'
+AUTH_SECRET="2G"
+DATABASE_URL="postgresql:"
+AUTH_DRIZZLE_URL="postgresql:"
+AUTH_GITHUB_ID=Ov23
+AUTH_GITHUB_SECRET=e25
+NEXTAUTH_URL=http://localhost:3000
+
+
+OPENAI_API_KEY=sk-proj-
