--- a/jinxify/package.json
+++ b/jinxify/package.json
@@ -12,13 +12,17 @@
 		"db:studio": "npx drizzle-kit studio"
 	},
 	"dependencies": {
+		"@ai-sdk/openai": "^1.0.5",
 		"@auth/drizzle-adapter": "^1.7.4",
+		"@hookform/resolvers": "^3.9.1",
 		"@neondatabase/serverless": "^0.10.4",
 		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.4",
 		"@tanstack/react-query": "^5.61.5",
+		"ai": "^4.0.8",
 		"bpmn-js": "^18.1.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -29,6 +33,7 @@
 		"next-auth": "^5.0.0-beta.25",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-hook-form": "^7.53.2",
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.23.8"
