--- a/jinxify/package.json
+++ b/jinxify/package.json
@@ -28,6 +28,7 @@
 		"clsx": "^2.1.1",
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.36.4",
+		"fast-xml-parser": "^4.5.0",
 		"lucide-react": "^0.462.0",
 		"next": "14.2.18",
 		"next-auth": "^5.0.0-beta.25",
