--- a/jinxify/package.json
+++ b/jinxify/package.json
@@ -18,6 +18,7 @@
 		"@neondatabase/serverless": "^0.10.4",
 		"@radix-ui/react-dialog": "^1.1.2",
 		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-scroll-area": "^1.2.1",
 		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.4",
@@ -36,12 +37,14 @@
 		"react-dom": "^18",
 		"react-hook-form": "^7.53.2",
 		"react-icons": "^5.3.0",
+		"react-markdown": "^9.0.1",
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
+		"@tailwindcss/typography": "^0.5.15",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
