--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
 	"name": "jinx-monorepo",
 	"version": "1.0.0",
 	"private": true,
-	"workspaces": ["jinxify", "website"],
+	"workspaces": [
+		"jinxify",
+		"website"
+	],
 	"scripts": {
 		"build": "npm run build --workspaces",
 		"dev": "npm run dev --workspaces"
