--- a/jinxify/package.json
+++ b/jinxify/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@ai-sdk/openai": "^1.0.5",
 		"@auth/drizzle-adapter": "^1.7.4",
+		"@hello-pangea/dnd": "^17.0.0",
 		"@hookform/resolvers": "^3.9.1",
 		"@neondatabase/serverless": "^0.10.4",
 		"@radix-ui/react-alert-dialog": "^1.1.2",
@@ -22,6 +23,7 @@
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-scroll-area": "^1.2.1",
+		"@radix-ui/react-select": "^2.1.2",
 		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.4",
