--- a/jinxify/package.json
+++ b/jinxify/package.json
@@ -41,6 +41,7 @@
 		"lucide-react": "^0.462.0",
 		"next": "14.2.18",
 		"next-auth": "^5.0.0-beta.25",
+		"pdf2json": "^3.1.5",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-hook-form": "^7.53.2",
