--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
 	"scripts": {
 		"build": "npm run build --workspaces",
 		"dev": "npm run dev --workspaces"
+	},
+	"dependencies": {
+		"pdf-parse": "^1.1.1"
+	},
+	"devDependencies": {
+		"@types/pdf-parse": "^1.1.4"
 	}
 }
