fix: merge conflict resolved

--- a/jinxify/package.json
+++ b/jinxify/package.json
@@ -38,9 +38,12 @@
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.36.4",
 		"fast-xml-parser": "^4.5.0",
+		"fs": "^0.0.1-security",
 		"lucide-react": "^0.462.0",
 		"next": "14.2.18",
 		"next-auth": "^5.0.0-beta.25",
+		"path": "^0.12.7",
+		"pdf-parse": "^1.1.1",
 		"pdf2json": "^3.1.5",
 		"react": "^18",
 		"react-dom": "^18",
@@ -57,6 +60,7 @@
 		"@biomejs/biome": "1.9.4",
 		"@tailwindcss/typography": "^0.5.15",
 		"@types/node": "^20",
+		"@types/pdf-parse": "^1.1.4",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"drizzle-kit": "^0.28.1",
