Add form-js and restructure chat sidebar

--- a/jinxify/package.json
+++ b/jinxify/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@ai-sdk/openai": "^1.0.5",
 		"@auth/drizzle-adapter": "^1.7.4",
+		"@bpmn-io/form-js": "^1.13.2",
 		"@hello-pangea/dnd": "^17.0.0",
 		"@hookform/resolvers": "^3.9.1",
 		"@neondatabase/serverless": "^0.10.4",
@@ -24,10 +25,10 @@
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-radio-group": "^1.2.2",
-		"@radix-ui/react-scroll-area": "^1.2.1",
+		"@radix-ui/react-scroll-area": "^1.2.2",
 		"@radix-ui/react-select": "^2.1.2",
 		"@radix-ui/react-separator": "^1.1.0",
-		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-tabs": "^1.1.2",
 		"@radix-ui/react-toast": "^1.2.4",
 		"@radix-ui/react-tooltip": "^1.1.4",
@@ -41,6 +42,7 @@
 		"fast-xml-parser": "^4.5.0",
 		"fs": "^0.0.1-security",
 		"lucide-react": "^0.462.0",
+		"marked": "^15.0.6",
 		"next": "14.2.18",
 		"next-auth": "^5.0.0-beta.25",
 		"path": "^0.12.7",
@@ -50,11 +52,12 @@
 		"react-dom": "^18",
 		"react-hook-form": "^7.53.2",
 		"react-icons": "^5.3.0",
-		"react-markdown": "^9.0.1",
+		"react-markdown": "^9.0.3",
 		"react-toastify": "^10.0.6",
 		"recharts": "^2.14.1",
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss-animate": "^1.0.7",
+		"use-debounce": "^10.0.4",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
