--- a/jinxify/package.json
+++ b/jinxify/package.json
@@ -17,6 +17,7 @@
 		"@bpmn-io/form-js": "^1.13.2",
 		"@hello-pangea/dnd": "^17.0.0",
 		"@hookform/resolvers": "^3.9.1",
+		"@mdxeditor/editor": "^3.20.0",
 		"@neondatabase/serverless": "^0.10.4",
 		"@radix-ui/react-accordion": "^1.2.2",
 		"@radix-ui/react-alert-dialog": "^1.1.2",
