--- a/jinxify/package.json
+++ b/jinxify/package.json
@@ -43,10 +43,12 @@
 		"drizzle-orm": "^0.36.4",
 		"fast-xml-parser": "^4.5.0",
 		"fs": "^0.0.1-security",
+		"jspdf": "^2.5.2",
 		"lucide-react": "^0.462.0",
 		"marked": "^15.0.6",
 		"next": "14.2.18",
 		"next-auth": "^5.0.0-beta.25",
+		"next-mdx-remote": "^5.0.0",
 		"path": "^0.12.7",
 		"pdf-parse": "^1.1.1",
 		"pdf2json": "^3.1.5",
@@ -57,6 +59,7 @@
 		"react-markdown": "^9.0.3",
 		"react-toastify": "^10.0.6",
 		"recharts": "^2.14.1",
+		"remove-markdown": "^0.6.0",
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss-animate": "^1.0.7",
 		"use-debounce": "^10.0.4",
