--- a/jinxify/package.json
+++ b/jinxify/package.json
@@ -26,6 +26,7 @@
 		"@radix-ui/react-dialog": "^1.1.2",
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-popover": "^1.1.4",
 		"@radix-ui/react-radio-group": "^1.2.2",
 		"@radix-ui/react-scroll-area": "^1.2.2",
 		"@radix-ui/react-select": "^2.1.2",
@@ -48,8 +49,8 @@
 		"marked": "^15.0.6",
 		"next": "14.2.18",
 		"next-auth": "^5.0.0-beta.25",
-		"next-themes": "^0.4.4",
 		"next-mdx-remote": "^5.0.0",
+		"next-themes": "^0.4.4",
 		"path": "^0.12.7",
 		"pdf-parse": "^1.1.1",
 		"pdf2json": "^3.1.5",
