--- a/jinxify/package.json
+++ b/jinxify/package.json
@@ -51,6 +51,7 @@
 		"next-auth": "^5.0.0-beta.25",
 		"next-mdx-remote": "^5.0.0",
 		"next-themes": "^0.4.4",
+		"openai": "^4.79.1",
 		"path": "^0.12.7",
 		"pdf-parse": "^1.1.1",
 		"pdf2json": "^3.1.5",
