--- a/jinxify/package.json
+++ b/jinxify/package.json
@@ -34,6 +34,8 @@
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-tabs": "^1.1.2",
 		"@radix-ui/react-toast": "^1.2.4",
+		"@radix-ui/react-toggle": "^1.1.1",
+		"@radix-ui/react-toggle-group": "^1.1.1",
 		"@radix-ui/react-tooltip": "^1.1.4",
 		"@tanstack/react-query": "^5.61.5",
 		"ai": "^4.0.8",
