--- a/jinxify/package.json
+++ b/jinxify/package.json
@@ -42,6 +42,7 @@
 		"bpmn-js": "^18.1.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"date-fns": "^3.6.0",
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.36.4",
 		"fast-xml-parser": "^4.5.0",
@@ -58,6 +59,7 @@
 		"pdf-parse": "^1.1.1",
 		"pdf2json": "^3.1.5",
 		"react": "^18",
+		"react-day-picker": "^8.10.1",
 		"react-dom": "^18",
 		"react-hook-form": "^7.53.2",
 		"react-icons": "^5.3.0",
