Add docker deployment option

--- a/jinxify/.env.example
+++ b/jinxify/.env.example
@@ -3,7 +3,7 @@ DATABASE_URL="postgresql:"
 AUTH_DRIZZLE_URL="postgresql:"
 AUTH_GITHUB_ID=Ov23
 AUTH_GITHUB_SECRET=e25
+AUTH_GOOGLE_ID=Ov23
+AUTH_GOOGLE_SECRET=e25
 NEXTAUTH_URL=http://localhost:3000
-
-
 OPENAI_API_KEY=sk-proj-
